[package]
name = "mvn-autoenforce"
version = "0.1.8-alpha.0"
authors = ["Olle Lundberg <geek@nerd.sh>"]
description = "Parses maven enforcer output and gives you the topmost version of dependencies"
repository = "https://github.com/lndbrg/mvn-autoenforce.git"
homepage = "https://github.com/lndbrg/mvn-autoenforce"
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
regex = "1"
version-compare = "0.0.11"
atty = "0.2"
